# coffee-website.github.io

./: .gitignore  Makefile  README.md  app.py  config.py  index.html  models.py  pyproject.toml
.github/workflows/: CI.yml
app/: __init__.py  forms.py  models.py  routes.py
css/: styles.css
data/: products.json
static/css/: style.css
templates/: about_us.html  base.html  coffee.html  create_user.html  index.html  login.html  registration.html  subscription.html
